# nes

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.c
docs/: view-source_https___web.archive.org_web_20210803072316_http___www.obelisk.me.uk_6502_reference.html
libnes/: CMakeLists.txt  cpu.c  cpu.h
test/: CMakeLists.txt  test_cpu.c
